# daipendency-extractor

./: .aider.conf.yml  .cursorrules  Cargo.toml  LICENSE  README.md
fixtures/rust-crate/: Cargo.toml  README.md  rust-fixture.laibrary
fixtures/rust-crate/src/text/: formatter.rs  mod.rs
src/: analysers.rs  error.rs  extractor.rs  formatting.rs  lib.rs  library_metadata.rs  listing.rs  main.rs  parsing.rs  test_helpers.rs  tree_sitter_helpers.rs  treesitter_test_helpers.rs  types.rs
src/analysers/: mod.rs
src/analysers/rust/: impl_generator.rs  impl_parser.rs
src/generator/: mod.rs
src/languages/: mod.rs  test_helpers.rs
src/languages/rust/: README.md  analyser.rs  api.rs  extraction.rs  formatting.rs  impl_extractor.rs  impl_generator.rs  impl_metadata.rs  metadata.rs  mod.rs  namespace_construction.rs  parsing.rs  public_members.rs  symbol_collection.rs  symbol_resolution.rs  test_helpers.rs  types.rs
src/languages/rust/api/: mod.rs  namespace_construction.rs  parsing.rs  symbol_collection.rs  symbol_resolution.rs
src/languages/rust/api/parsing/: doc_comments.rs  files.rs  helpers.rs  macros.rs  mod.rs  reexports.rs  symbol_reexports.rs  symbols.rs  test_helpers.rs
src/parser/: mod.rs  rust_parser.rs
