[package]
name = "laibrary"
version = "0.1.1"
edition = "2021"
description = "Provides AI coding assistants with public APIs and documentation from dependencies."
license = "MIT"
authors = ["Gus Narea"]

[build-dependencies]
cc = "1.2.6"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tree-sitter = "0.24.6"
tree-sitter-rust = "0.23.2"
walkdir = "2.4.0"

[dev-dependencies]
assertables = "9.5.0"
tempfile = "3.10.0"
