[package]
name = "daipendency-extractor"
version = "1.0.2"
edition = "2021"
description = "Core library for Daipendency extractors"
license = "MIT"
authors = ["Gus Narea"]

[build-dependencies]
cc = "1.2.6"

[dependencies]
tree-sitter = "0.24.6"
walkdir = "2.4.0"

[dev-dependencies]
assertables = "9.5.0"
