[package]
name = "daipendency-extractor"
version = "1.0.5"
edition = "2021"
description = "Core library for Daipendency extractors"
repository = "https://github.com/daipendency/daipendency-extractor"
homepage = "https://github.com/daipendency/daipendency-extractor"
documentation = "https://docs.rs/daipendency-extractor"
license = "MIT"
authors = ["Gus Narea"]

[build-dependencies]
cc = "1.2.6"

[dependencies]
thiserror = "2.0.11"
tree-sitter = "0.24.6"
walkdir = "2.4.0"

[dev-dependencies]
assertables = "9.5.0"
